--- a/css/halls.css
+++ b/css/halls.css
@@ -60,14 +60,12 @@ footer{
     width: 300px;
     text-align: justify;
 }
-#qtopizza{
-    color: #fff;
-}
 #buttons{
     display: flex;
     flex-direction: column;
 }
 .qto{
+    color: #fff !important;
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
     top: 35px;
